<resources>
    <string name="app_name">USB Serial Metrics</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="mik3y">mik3y</string>
    <string name="felhr85">felHR85</string>
    <string name="blinker">Blinker</string>
    <string name="note">Two implementations of USB serial. One using mik3y\'s and the other using felhr85\'s.\nClick either button to connect and enable using that implement.\nThis is not a monitor, it is only used for metrics</string>
</resources>